<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1E0342"
    tools:context=".BookActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="207dp"
        android:layout_height="162dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/book_dream_logo_template___reading_logo__2_" />

    <Button
        android:id="@+id/btnBView"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:backgroundTint="#9AC8CD"
        android:text="@string/view_data"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.762" />

    <EditText
        android:id="@+id/txtmain"
        android:layout_width="315dp"
        android:layout_height="57dp"
        android:fontFamily="monospace"
        android:text="@string/library_management_system"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.16"
        tools:ignore="TextSizeCheck" />

    <Button
        android:id="@+id/btnBInsert"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:backgroundTint="#9AC8CD"
        android:text="@string/insert_new_data"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.674" />

    <Button
        android:id="@+id/btnBUpdate"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:backgroundTint="#9AC8CD"
        android:text="@string/update_data"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.863"
        tools:ignore="TextSizeCheck" />

    <EditText
        android:id="@+id/bookid"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_below="@+id/texttitle"
        android:autofillHints=""
        android:hint="@string/book_id"
        android:inputType="text"
        android:textColor="@color/white"
        android:textColorHint="#808080"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.372"
        tools:ignore="TextSizeCheck" />

    <EditText
        android:id="@+id/bookname"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:autofillHints=""
        android:hint="@string/book_title"
        android:inputType="text"
        android:textColor="@color/white"
        android:textColorHint="#808080"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.477"
        tools:ignore="TextSizeCheck" />

    <Button
        android:id="@+id/btnBDelete"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginStart="105dp"
        android:layout_marginEnd="106dp"
        android:backgroundTint="#9AC8CD"
        android:text="@string/delete_existing_data"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.957"
        tools:ignore="TextSizeCheck" />

    <EditText
        android:id="@+id/texttitle"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:text="@string/please_enter_the_book_details_below"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.259"
        tools:ignore="TextSizeCheck" />

    <EditText
        android:id="@+id/pname"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:autofillHints=""
        android:hint="@string/publisher_name"
        android:inputType="text"
        android:textColor="@color/white"
        android:textColorHint="#808080"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.58" />

</androidx.constraintlayout.widget.ConstraintLayout>