<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1E0342"
    tools:context=".BranchActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="210dp"
        android:layout_height="195dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/book_dream_logo_template___reading_logo__2_" />

    <Button
        android:id="@+id/btnBrDelete"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginStart="105dp"
        android:layout_marginEnd="106dp"
        android:backgroundTint="#9AC8CD"
        android:text="@string/delete_existing_data"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.935"
        tools:ignore="TextSizeCheck" />

    <Button
        android:id="@+id/btnBrView"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:backgroundTint="#9AC8CD"
        android:text="@string/view_data"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.74" />

    <EditText
        android:id="@+id/branchname"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_below="@+id/branchid"
        android:autofillHints=""
        android:hint="Branch Name"
        android:inputType="text"
        android:textColor="@color/white"
        android:textColorHint="#808080"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.455"
        tools:ignore="TextSizeCheck" />

    <EditText
        android:id="@+id/branchid"
        android:layout_width="300dp"
        android:layout_height="57dp"
        android:layout_below="@+id/texttitle"
        android:autofillHints=""
        android:hint="Branch ID"
        android:inputType="text"
        android:textColor="@color/white"
        android:textColorHint="#808080"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.353"
        tools:ignore="TextSizeCheck" />

    <Button
        android:id="@+id/btnBrUpdate"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:backgroundTint="#9AC8CD"
        android:text="@string/update_data"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.841"
        tools:ignore="TextSizeCheck" />

    <Button
        android:id="@+id/btnBrInsert"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:backgroundTint="#9AC8CD"
        android:text="@string/insert_new_data"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.651" />

    <EditText
        android:id="@+id/braddress"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_below="@+id/branchname"
        android:autofillHints=""
        android:hint="Address"
        android:inputType="text"
        android:textColor="@color/white"
        android:textColorHint="#808080"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.556" />

    <EditText
        android:id="@+id/txtmain"
        android:layout_width="315dp"
        android:layout_height="57dp"
        android:fontFamily="monospace"
        android:text="@string/library_management_system"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.181"
        tools:ignore="TextSizeCheck" />

    <EditText
        android:id="@+id/texttitle"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:text="Please enter branch details below"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.262"
        tools:ignore="TextSizeCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>